crates/kernel/tests/table/snapshots/main__table__router__an_installed_shuffle_order_is_what_advance_follows.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Playback(
            ToggleShuffle,
        ),
        [
            Animate(
                PlayOrderChanged,
            ),
            RollShuffle(
                4,
            ),
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0.flac",
                tagging: Read(
                    100s,
                ),
            },
            playhead: Playhead {
                offset: 0ns,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preloaded: None,
        },
        None,
        Cursor {
            index: 0,
            len: 4,
        },
        Cursor {
            index: 0,
            len: 4,
        },
        [],
        Off,
        ShufflePending,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        ShuffleRolled(
            [
                Index(2),
                Index(0),
                Index(3),
                Index(1),
            ],
        ),
        [],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0.flac",
                tagging: Read(
                    100s,
                ),
            },
            playhead: Playhead {
                offset: 0ns,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preloaded: None,
        },
        None,
        Cursor {
            index: 0,
            len: 4,
        },
        Cursor {
            index: 0,
            len: 4,
        },
        [],
        Off,
        Shuffle(
            [
                Index(2),
                Index(0),
                Index(3),
                Index(1),
            ],
        ),
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Audio(
            Ended,
        ),
        [
            Audio(
                Load(
                    TrackLoad {
                        path: "/tmp/track3.flac",
                        gain: None,
                        revision: Revision(
                            1,
                        ),
                    },
                ),
            ),
            Library(
                AppendHistory(
                    HistoryEntry {
                        track: Local(
                            "/tmp/track3.flac",
                        ),
                        title: "track3",
                        artist: None,
                        at: Moment(
                            0ns,
                        ),
                    },
                ),
            ),
            Macos(
                NowPlaying(
                    Some(
                        Track {
                            source: Local(
                                "/tmp/track3.flac",
                            ),
                            tags: Tags {
                                title: None,
                                artist: None,
                                album: None,
                                album_artist: None,
                                date: None,
                                genre: None,
                                track: None,
                                track_total: None,
                                disc: None,
                                composer: None,
                                comment: None,
                                lyrics: None,
                            },
                            audio_format: AudioFormat {
                                format: None,
                                bitrate: None,
                                sample_rate: None,
                                bits_per_sample: None,
                                channels: None,
                                replay_gain: None,
                            },
                            display: "track3.flac",
                            tagging: Read(
                                100s,
                            ),
                        },
                    ),
                ),
            ),
            Audio(
                SetPlayback(
                    Playing,
                ),
            ),
            Macos(
                SetPlayback(
                    Playing,
                ),
            ),
            Animate(
                TrackChanged,
            ),
            Animate(
                PlaybackChanged(
                    Play,
                ),
            ),
        ],
        Loading(
            Track {
                source: Local(
                    "/tmp/track3.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track3.flac",
                tagging: Read(
                    100s,
                ),
            },
        ),
        None,
        Cursor {
            index: 3,
            len: 4,
        },
        Cursor {
            index: 3,
            len: 4,
        },
        [],
        Off,
        Shuffle(
            [
                Index(2),
                Index(0),
                Index(3),
                Index(1),
            ],
        ),
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Audio(
            Loaded(
                None,
            ),
        ),
        [
            Macos(
                SetPosition(
                    0ns,
                ),
            ),
            After {
                delay: 90s,
                timer: Lookahead(
                    Revision(
                        3,
                    ),
                ),
            },
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track3.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track3.flac",
                tagging: Read(
                    100s,
                ),
            },
            playhead: Playhead {
                offset: 0ns,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preloaded: None,
        },
        None,
        Cursor {
            index: 3,
            len: 4,
        },
        Cursor {
            index: 3,
            len: 4,
        },
        [],
        Off,
        Shuffle(
            [
                Index(2),
                Index(0),
                Index(3),
                Index(1),
            ],
        ),
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Audio(
            Ended,
        ),
        [
            Audio(
                Load(
                    TrackLoad {
                        path: "/tmp/track1.flac",
                        gain: None,
                        revision: Revision(
                            4,
                        ),
                    },
                ),
            ),
            Library(
                AppendHistory(
                    HistoryEntry {
                        track: Local(
                            "/tmp/track1.flac",
                        ),
                        title: "track1",
                        artist: None,
                        at: Moment(
                            0ns,
                        ),
                    },
                ),
            ),
            Macos(
                NowPlaying(
                    Some(
                        Track {
                            source: Local(
                                "/tmp/track1.flac",
                            ),
                            tags: Tags {
                                title: None,
                                artist: None,
                                album: None,
                                album_artist: None,
                                date: None,
                                genre: None,
                                track: None,
                                track_total: None,
                                disc: None,
                                composer: None,
                                comment: None,
                                lyrics: None,
                            },
                            audio_format: AudioFormat {
                                format: None,
                                bitrate: None,
                                sample_rate: None,
                                bits_per_sample: None,
                                channels: None,
                                replay_gain: None,
                            },
                            display: "track1.flac",
                            tagging: Read(
                                100s,
                            ),
                        },
                    ),
                ),
            ),
            Audio(
                SetPlayback(
                    Playing,
                ),
            ),
            Macos(
                SetPlayback(
                    Playing,
                ),
            ),
            Animate(
                TrackChanged,
            ),
            Animate(
                PlaybackChanged(
                    Play,
                ),
            ),
        ],
        Loading(
            Track {
                source: Local(
                    "/tmp/track1.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track1.flac",
                tagging: Read(
                    100s,
                ),
            },
        ),
        None,
        Cursor {
            index: 1,
            len: 4,
        },
        Cursor {
            index: 1,
            len: 4,
        },
        [],
        Off,
        Shuffle(
            [
                Index(2),
                Index(0),
                Index(3),
                Index(1),
            ],
        ),
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
